# TinyBird

./: .gitignore  AVES_supervised_classification.ipynb  SongMAE IEEE Jan 31 2026 Submission.md  contrastive_test.py  pyproject.toml  readme.md  requirements.txt  requirments.txt  temp.txt  test.ipynb  umap_test.ipynb
archive/: birdset_fetch_extract_coverage.py  detected_events.py  move_detected_events.py
img/: umap_selection_162pts_20250901_153737.npz  umap_selection_176pts_20250901_153818.npz  umap_selection_177pts_20250901_153746.npz  umap_selection_229pts_20250901_153724.npz  umap_selection_303pts_20250901_153832.npz  umap_selection_443pts_20250901_153804.npz  umap_selection_44pts_20250901_153811.npz
individual_id/: run_zf_individual_umap_compare.sh  train_linear_probes_individual_id.sh
logs/: pt_conversion-40295648.err  pt_conversion-40295651.err  pt_conversion-40295651.out  tinybird-pretrain-40295722.err  tinybird-pretrain-40295723.err  tinybird-pretrain-40295723.out  tinybird-pretrain-40295724.out  tinybird-xcl-40117303.err  tinybird-xcl-40117303.out  tinybird-xcl-40117395.out  tinybird-xcl-40120168.out
sbatch/: audio2spec_xcl.sbatch  classify_detect_benchmark.sbatch  compute_spec_stats.sbatch  convert_pt_to_npy.sbatch  pretrain_tinybird.sbatch  test_train_split.sbatch
scripts/: birdset_scape.py  check_ebird_codes.py  concat_eval_f1_score_files.py  convert_pt_to_npy.py  eval_embedding.py  extract_detected_events_from_spectrograms.py  fix_cluster_block_assignments.py  generate_umap_series.py  sample_by_seconds.py  spectrogram_viewer.py  split_train_test.py  (+2 more)
(+110 files in other folders)
