[project]
name = "tinybird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "stumpy>=1.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.2",
    "pandas>=2.2.6",
    "moviepy>=2.0.0",
]
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = true
quote-style = "preserve"
